# Pathogen

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  main.cpp
assets/shaders/: basic.frag  basic.vert  ui.vert
cmake/modules/: FindGLFW3.cmake
src/: cell.cpp  cell.hpp  editor.cpp  editor.hpp  enemy.cpp  enemy.hpp  flagella.cpp  flagella.hpp  game.cpp  game.hpp  game_object.cpp  game_object.hpp  input_codes.hpp  input_handler.cpp  input_handler.hpp  part.cpp  part.hpp  player.cpp  player.hpp  serializer.cpp  serializer.hpp  shader.cpp  shader.hpp  sprite.hpp  sprite_renderer.cpp  sprite_renderer.hpp  ui_panel.cpp  ui_panel.hpp  ui_text_input.cpp  ui_text_input.hpp
